ZEsarUX 12.1 - Night Shift edition. 24 May 2025

* New things added:

Added Streaming mode to ZENG Online for ZX Spectrum. It improves gaming experience: reduces lag and drops all game state inconsistencies between all players
Added ZXMMC+ emulation
Added second MMC/SD card emulation
Added conversion of ZX81 files P to P81, and P81 to P
Added direct functions to increase/decrease Audio Volume
Allow to save ZX80/81 screen to .scr file
Allow to save text note on a ZSF snapshot
Allow to locate rom files running ZEsarUX from a current folder different than the rom path
Allow machine selection by family type (Spectrum, ZX80, ZX81, CPC, etc)
Added .ay file support to File Viewer
Added support for up to 4 joystick fire buttons on:
- Kempston joystick (Spectrum): 4 buttons
- Amstrad CPC: 3 buttons
- Master System, SG1000, Colecovision: 2 buttons

* Improvements:

Improved AY Player:
- Allow to load playlist
- Allow to save playlist (full playlist or just marked files)
- Allow to increase track length (for some tracks with incorrect length)
- Added direct functions to next/previous track/file
- Show tenths of a second on song length and time elapsed
- Better shuffle algorithm
- Fixed silence detection when playback paused

Improved Sinclair QL emulation:
- Allow to increase RAM size
- Allow to load and save QL screen files
- Added QL Screen file previews on File Selector
- Allow to use win1_ device as an alias to mdv1_ (useful for QL-SD paths)
- Fixed Sinclair QL keyboard: allow fast text writing
- Allow display blanking

Improved ZX Vision:
- Allow to hide minimized windows
- Allow to place windows beyond ZEsarUX main window limits
- Do not reopen menu when closing a Window
- Allow fast text writing on input fields
- Show, with a dot, when an icon is an open window but minimized
- Keep ZEsarUX window size proportions (disallow different zoom x/y) by default
- Hide cursor when sending a window to background
- Allow to show short text for icons on ZX Desktop