@@ -130,10 +130,11 @@ Presets quiza con archivos .config. Se pueden cargar tal cual? O desde opciones 
 ok *quiza tambien por settings de .config poder hacer pokes para eliminar retorno de steering wheel
 *documentacion parametros .config en --helpcustomconfig
 ok *quiza estos .config deberian ser .postconfig, por decir que hay que aplicarlos despues de cargar el juego, por el tema de los pokes
-*entrada en changelog
+ok *entrada en changelog
 *video demo
 ok *pasar esos .pok a .config. pasar todos los ajustes de juegos de realjoystick.c a archivos config
-*meter esos .config en extras? o en codigo de ZEsarUX tal cual? ocupan poco...
+ok *meter esos .config en extras? o en codigo de ZEsarUX tal cual? ocupan poco... quiza en carpeta steering_wheel_presets,
+agregar esa carpeta en configure, generate_install.sh, etc. Y al cargar preset que abra esa carpeta por defecto
 
 Probar en diferentes sistemas:
 error solo 0 o 1 *Probar volante desde Linux sdl
