@@ -14,7 +14,7 @@ mkdir -p $INSTALLPREFIX
 mkdir -p $INSTALLPREFIX/bin
 mkdir -p $INSTALLPREFIX/share/zesarux/
 
-COMMONFILES="ACKNOWLEDGEMENTS LICENSE LICENSES_info licenses Changelog Cambios TODO* README HISTORY FEATURES FEATURES_es EXCLUSIVEFEATURES INSTALL INSTALLWINDOWS IN_MEMORIAM* ALTERNATEROMS INCLUDEDTAPES DONATE DONORS FAQ *.odt mantransfev3.bin *.rom zxuno.flash zxmmcplus.flash tbblue.mmc pcw_8x_boot*dsk speech_filters text_image_filters my_soft copiers docs zesarux.mp3 zesarux.xcf $EDITION_NAME_GAME* keyboards alternate_roms z88_shortcuts.bmp zesarux.pdf"
+COMMONFILES="ACKNOWLEDGEMENTS LICENSE LICENSES_info licenses Changelog Cambios TODO* README HISTORY FEATURES FEATURES_es EXCLUSIVEFEATURES INSTALL INSTALLWINDOWS IN_MEMORIAM* ALTERNATEROMS INCLUDEDTAPES DONATE DONORS FAQ *.odt mantransfev3.bin *.rom zxuno.flash zxmmcplus.flash tbblue.mmc pcw_8x_boot*dsk speech_filters text_image_filters my_soft copiers steering_wheel_presets docs zesarux.mp3 zesarux.xcf $EDITION_NAME_GAME* keyboards alternate_roms z88_shortcuts.bmp zesarux.pdf"
 
 # -f to force overwrite already existing share files which are set to 444
 cp -f -a \$COMMONFILES $INSTALLPREFIX/share/zesarux/
