@@ -1,0 +1,7 @@
+--steering-wheel-address 96ach
+--steering-wheel-min-value -120
+--steering-wheel-max-value +120
+--steering-wheel-center-value 0
+--steering-wheel-no-inverted
+--steering-wheel-no-two-addresses
+--steering-wheel-enable
