@@ -1,0 +1,10 @@
+--steering-wheel-address 9970h
+--steering-wheel-min-value 0
+--steering-wheel-max-value 15
+--steering-wheel-center-value 8
+--steering-wheel-no-inverted
+--steering-wheel-no-two-addresses
+--steering-wheel-enable
+--poke 40133 0
+--poke 40134 0
+--poke 40135 0
