@@ -1,0 +1,8 @@
+--steering-wheel-address 8e00h
+--steering-wheel-min-value +1
+--steering-wheel-max-value +7
+--steering-wheel-center-value +4
+--steering-wheel-no-inverted
+--steering-wheel-no-two-addresses
+--steering-wheel-enable
+--poke 40797 0
