@@ -1,0 +1,10 @@
+--steering-wheel-address bfd9h
+--steering-wheel-min-value -6
+--steering-wheel-max-value +6
+--steering-wheel-center-value 0
+--steering-wheel-no-inverted
+--steering-wheel-no-two-addresses
+--steering-wheel-enable
+--poke 40159 0
+--poke 40160 0
+--poke 40161 0
